--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,8 +3,11 @@
   grid-column: 1 / -1;
   z-index: 2;
   background: linear-gradient(180deg, $basic-dark 84.9%, $gradient 100%);
-  position: fixed;
-  width: 100vw;
+
+  @media (min-width: $desktop-only) {
+    position: fixed;
+    width: 100vw;
+  }
 }
 
 .page-header__wrapper {
@@ -24,6 +27,7 @@
 }
 
 .page-header__list {
+  max-width: calc(700px + (980 - 700) * ((100vw - 1024px) / (3000 - 1024)));
   list-style: none;
   margin: 0 calc(33px + (61 - 33) * ((100vw - 1024px) / (1920 - 1024))) 6px 0;
   gap: calc(65px + (122 - 65) * ((100vw - 1024px) / (1920 - 1024)));
@@ -33,8 +37,13 @@
   align-items: center;
 
   @media (max-width: $tablet-width) {
+    max-width: 300px;
     margin: 0;
     gap: 20px;
+  }
+
+  @media (max-width: $mobile-width) {
+    max-width: 160px;
   }
 }
 
