--- a/source/sass/blocks/page-wrapper.scss
+++ b/source/sass/blocks/page-wrapper.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
 
   @media (max-width: $tablet-width) {
-    max-width: 670px;
+    max-width: calc(100% - 100px);
   }
 
   @media (max-width: $mobile-width) {
